# philosophia

./: .gitignore  AMENDMENTS.md  CITATION.cff  CONTRIBUTORS.md  MANIFEST.md  README.md  ROADMAP.md  SOURCE_SHA256SUMS  conftest.py  pyproject.toml
canonical/: AUTHOR_ROUTE_DECISION.md  CLAIM_LEDGER.md  KILL_MATRIX.md  RESULTS_CANONICAL.md
demo/: README.md
docs/: evidence.js  index.html  styles.css
essay/: README.md  REVIEW_HANDOFF.md  climbing-the-wall-of-experience.md
experiments/: README.md
gate_harness/: README.md  __init__.py  calibration_audit.py  evaluation_oracle.py  install_hooks.sh  leakage_scanner.py  prereg.py  runner.py  seed_policy.py  tautology_check.py  verify_decision.py
inheritance/: line13_philosophia_map.md
references/: LITERATURE_MAP.md  README.md
reviews/: LEVELS1_3_CLAIM_GRAPH_SIGNATURES.md  codex_level1_implementation_review_closure.md  codex_level1_public_root_m3_correction.md  codex_level1_public_root_review_closure.md  codex_level1_terminal_programme_reconciliation.md  fable_level1_feasibility_floor_amendment_v2_1_closure.md  fable_level1_feasibility_floor_amendment_v2_1_prompt.md  fable_level1_feasibility_floor_amendment_v2_2_closure.md  fable_level1_feasibility_floor_amendment_v2_2_prompt.md  fable_level1_feasibility_floor_amendment_v2_closure.md  fable_level1_feasibility_floor_amendment_v2_prompt.md  fable_level1_feasibility_gate_closure.md  fable_level1_feasibility_gate_prompt.md  fable_level1_panel_contract_amendment_prompt.md  fable_level1_spec_v2_closure.md  fable_level1_spec_v2_revision_prompt.md  (+365 more)
scripts/: verify_all.py  (+14 more)
(+256 files in other folders)
